<resources>
    <string name="app_name">FastMarket</string>
    <string name="item_sair">Sair</string>
    <string name="item_AlterDados">Alterar Dados</string>
    <string name="item_Historico">Historico de Compras</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_lista">Lista</string>
    <string name="tab_procura">Procura</string>
    <string name="tab_mapa">Mapa</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="frag_lista">Sua lista de compras</string>
    <string name="frag_procura">Pesquisa de produto</string>
    <string name="frag_mapa">Mapa</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="nome">Nome:</string>
    <string name="preco">Preço:</string>
    <string name="corredor">Corredor:</string>
    <string name="item_Ajuda">Ajuda</string>
    <string name="listaVazia">Lista vaiza =(</string>
    <string name="listaDeCompra">Lista de Compra</string>
    <string name="finalizaLista">Finalizar Lista</string>
    <string name="ListaOrdenada">Lista de Compra montada</string>
</resources>
