<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".activity.MainActivity">

    <item android:id="@+id/item_historico"
        android:title="@string/item_Historico"
        android:orderInCategory="100" app:showAsAction="never"/>

    <item android:id="@+id/item_alterardados"
        android:title="@string/item_AlterDados"
        android:orderInCategory="200" app:showAsAction="never"/>

    <item android:id="@+id/item_sair"
        android:title="@string/item_sair"
        android:orderInCategory="300" app:showAsAction="never"/>

    <item android:id="@+id/item_help"
        android:title="@string/item_Ajuda"
        android:orderInCategory="400" app:showAsAction="ifRoom" android:icon="@drawable/ic_help"/>
</menu>